Implemented KafkaEventProducer and invitation service
