# lingualab-impl/src/main/java/xyz/le30r/lingualab/auth/entity/Invite.java
@@ -17,11 +17,15 @@ public class Invite {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-    @ManyToOne(targetEntity = Auth.class)
-    @JoinColumn(name = "teacher_id")
-    private Long teacher;
     private Instant createdAt;
     private Instant expiresAt;
     private Integer usages;
     private String link;
+
+    @ManyToOne(targetEntity = Auth.class, fetch = FetchType.LAZY)
+    @JoinColumn(name = "teacher_id", insertable = false, updatable = false)
+    @ToString.Exclude
+    private Auth teacher;
+    @Column(name = "teacher_id")
+    private Long teacherId;
 }
